@@ -2,6 +2,7 @@ package nl.inl.blacklab.search;
 
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -16,20 +17,29 @@ import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
 
+import nl.inl.blacklab.exceptions.InvalidQuery;
 import nl.inl.blacklab.forwardindex.Terms;
+import nl.inl.blacklab.queryParser.corpusql.CorpusQueryLanguageParser;
 import nl.inl.blacklab.resultproperty.HitProperty;
+import nl.inl.blacklab.resultproperty.HitPropertyBeforeHit;
 import nl.inl.blacklab.resultproperty.HitPropertyHitText;
-import nl.inl.blacklab.resultproperty.HitPropertyLeftContext;
 import nl.inl.blacklab.resultproperty.HitPropertyMultiple;
 import nl.inl.blacklab.resultproperty.PropertyValue;
 import nl.inl.blacklab.resultproperty.PropertyValueContextWords;
 import nl.inl.blacklab.search.indexmetadata.Annotation;
 import nl.inl.blacklab.search.indexmetadata.MatchSensitivity;
+import nl.inl.blacklab.search.indexmetadata.RelationUtil;
+import nl.inl.blacklab.search.lucene.BLSpanMultiTermQueryWrapper;
+import nl.inl.blacklab.search.lucene.BLSpanQuery;
 import nl.inl.blacklab.search.lucene.BLSpanTermQuery;
+import nl.inl.blacklab.search.lucene.MatchInfo;
 import nl.inl.blacklab.search.lucene.SpanQueryFiltered;
 import nl.inl.blacklab.search.results.DocResult;
 import nl.inl.blacklab.search.results.DocResults;
 import nl.inl.blacklab.search.results.Hits;
+import nl.inl.blacklab.search.textpattern.TextPattern;
+import nl.inl.blacklab.search.textpattern.TextPatternFixedSpan;
+import nl.inl.blacklab.search.textpattern.TextPatternRegex;
 import nl.inl.blacklab.testutil.TestIndex;
 
 @RunWith(Parameterized.class)
@@ -43,14 +53,9 @@ public class TestSearches {
     @Parameterized.Parameter
     public TestIndex testIndex;
 
-    /**
-     * Expected search results;
-     */
-    List<String> expected;
-
     @Test
     public void testSimple() {
-        expected = Arrays.asList(
+        List<String> expected = Arrays.asList(
                 "[The] quick",
                 "over [the] lazy",
                 "May [the] Force",
@@ -73,14 +78,14 @@ public class TestSearches {
 
     @Test
     public void testSimpleDocFilter() {
-        expected = List.of("May [the] Force");
+        List<String> expected = List.of("May [the] Force");
         int docId = testIndex.getDocIdForDocNumber(2);
         Assert.assertEquals(expected, testIndex.findConc(" 'the' ", new SingleDocIdFilter(docId)));
     }
 
     @Test
     public void testSimpleTitleFilter() {
-        expected = List.of("May [the] Force");
+        List<String> expected = List.of("May [the] Force");
         // metadata is tokenized and lowercased by default
         Query filter = new TermQuery(new Term("title", "star"));
         Assert.assertEquals(expected, testIndex.findConc(" 'the' ", filter));
@@ -88,7 +93,7 @@ public class TestSearches {
 
     @Test
     public void testFilteredQuery() {
-        expected = Arrays.asList("[The] quick", "over [the] lazy");
+        List<String> expected = Arrays.asList("[The] quick", "over [the] lazy");
         BLSpanTermQuery patternQuery = new BLSpanTermQuery(null, new Term("contents%word@i", "the"));
         TermQuery filterQuery = new TermQuery(new Term("contents%word@i", "fox"));
         Assert.assertEquals(expected, testIndex.findConc(new SpanQueryFiltered(patternQuery, filterQuery)));
@@ -96,13 +101,24 @@ public class TestSearches {
 
     @Test
     public void testSequences() {
-        expected = Arrays.asList(
+        List<String> expected = Arrays.asList(
                 "quick [brown fox] jumps",
                 "the [lazy dog]");
         Assert.assertEquals(expected, testIndex.findConc(" [pos='adj'] [pos='nou'] "));
         // Also test that forward index matching either the first or the second clause produces the same results
         Assert.assertEquals(expected, testIndex.findConc(" _FI1([pos='adj'], [pos='nou']) "));
         Assert.assertEquals(expected, testIndex.findConc(" _FI2([pos='adj'], [pos='nou']) "));
+    }
+
+    @Test
+    public void testSequences2() {
+        List<String> expected = List.of(
+                "mier [aap mier] mier"
+        );
+        String query = "'aap' 'mier'";
+        List<String> result = testIndex.findConc(query);
+        Assert.assertEquals(1, result.size());
+        Assert.assertEquals(expected, result);
     }
 
     @Test
@@ -116,7 +132,7 @@ public class TestSearches {
 
     @Test
     public void testMatchAll() {
-        expected = Arrays.asList(
+        List<String> expected = Arrays.asList(
                 "brown [fox jumps] over",
                 "the [Force be] with");
         Assert.assertEquals(expected, testIndex.findConc(" [pos='nou'] [] "));
@@ -131,7 +147,7 @@ public class TestSearches {
 
     @Test
     public void testOptional1() {
-        expected = Arrays.asList(
+        List<String> expected = Arrays.asList(
                 "be [with you]",
                 "with [you]",
                 "to [find That] is",
@@ -141,7 +157,7 @@ public class TestSearches {
 
     @Test
     public void testOptional2() {
-        expected = Arrays.asList(
+        List<String> expected = Arrays.asList(
                 "with [you]",
                 "find [That] is",
                 "find [That is] the");
@@ -151,7 +167,7 @@ public class TestSearches {
 
     @Test
     public void testOptional3() {
-        expected = Arrays.asList(
+        List<String> expected = Arrays.asList(
                 "be [with] you",
                 "be [with you]",
                 "with [you]",
@@ -164,7 +180,7 @@ public class TestSearches {
 
     @Test
     public void testRepetition() {
-        expected = List.of(
+        List<String> expected = List.of(
                 "The [quick brown] fox");
         Assert.assertEquals(expected, testIndex.findConc(" [pos='adj']{2} "));
 
@@ -177,15 +193,25 @@ public class TestSearches {
     }
 
     @Test
+    public void testRepetitionNonConsecutive() {
+        List<String> expected = List.of(
+                "mier [aap mier mier mier noot noot aap aap] aap",
+                "mier [aap mier mier mier noot noot aap aap aap] aap",
+                "mier [aap mier mier mier noot noot aap aap aap aap]",
+                "noot [aap aap aap aap]");
+        Assert.assertEquals(expected, testIndex.findConc("('aap' [word != 'noot']{1, 3} 'noot'{0,2}){2,}"));
+    }
+
+    @Test
     public void testRepetitionNoResults() {
-        expected = List.of();
+        List<String> expected = Collections.emptyList();
         Assert.assertEquals(expected, testIndex.findConc("[pos='PD.*']+ '(?i)getal'"));
 
     }
 
     @Test
     public void testStringRegexes() {
-        expected = Arrays.asList(
+        List<String> expected = Arrays.asList(
                 "quick [brown] fox",
                 "Force [be] with");
         Assert.assertEquals(expected, testIndex.findConc(" 'b.*' "));
@@ -198,14 +224,14 @@ public class TestSearches {
 
     @Test
     public void testUniq() {
-        expected = List.of(
+        List<String> expected = List.of(
                 "fox [jumps] over");
         Assert.assertEquals(expected, testIndex.findConc("[word = 'jumps' | lemma = 'jump']"));
     }
 
     @Test
     public void testOr() {
-        expected = Arrays.asList(
+        List<String> expected = Arrays.asList(
                 "fox [jumps] over",
                 "jumps [over] the");
         Assert.assertEquals(expected, testIndex.findConc("[word = 'jumps' | lemma = 'over']"));
@@ -213,13 +239,40 @@ public class TestSearches {
 
     @Test
     public void testAnd() {
-        expected = List.of(
+        List<String> expected = List.of(
                 "The [quick] brown");
         Assert.assertEquals(expected, testIndex.findConc("[pos = 'adj' & lemma = '.*u.*']"));
     }
 
     @Test
+    public void testAnd2() {
+        List<String> expected = List.of(
+                "fox [jumps] over");
+        Assert.assertEquals(expected, testIndex.findConc("[word = 'jumps' & lemma = 'jump']"));
+    }
+
+    @Test
+    public void testAndAnyToken() {
+        List<String> expected = List.of("fox [jumps] over");
+
+        // AND with any token repetition is optimized; check that this works properly
+        Assert.assertEquals(expected, testIndex.findConc("[] & 'jumps'"));
+        Assert.assertEquals(expected, testIndex.findConc("[]* & 'jumps'"));
+        Assert.assertEquals(expected, testIndex.findConc("[]+ & 'jumps'"));
+        Assert.assertEquals(expected, testIndex.findConc("[]+ & [] & 'jumps'"));
+        Assert.assertEquals(expected, testIndex.findConc("[]{1,2} & 'jumps'"));
+
+        // Contradictary clauses should not return any results
+        Assert.assertEquals(Collections.emptyList(), testIndex.findConc("[]{2,2} & 'jumps'"));
+        Assert.assertEquals(Collections.emptyList(), testIndex.findConc("[] & ('jumps' 'over')"));
+    }
+
+    @Test
     public void testTags() {
+        List<String> expected = List.of(
+                "[The quick brown fox] jumps", "over [the lazy dog]", "May [the Force] be");
+        Assert.assertEquals(expected, testIndex.findConc("<entity/>"));
+
         expected = List.of(
                 "quick [brown] fox");
         Assert.assertEquals(expected, testIndex.findConc(" 'b.*' within <entity/> "));
@@ -238,51 +291,75 @@ public class TestSearches {
     }
 
     @Test
+    public void testRelRspan() {
+        if (testIndex.getIndexType() == BlackLabIndex.IndexType.INTEGRATED) {
+            List<String> allRelations = List.of(
+                    "[The quick brown fox] jumps", "over [the lazy dog]", "May [the Force] be");
+            List<String> targets = List.of("fox [] jumps", "dog []", "Force [] be");
+            List<String> sources = List.of("[] The", "over [] the", "May [] the");
+            List<String> none = Collections.emptyList();
+            String type = RelationUtil.inlineTagFullType("entity");
+
+            Assert.assertEquals(allRelations, testIndex.findConc("rel('" + type + "', _, 'full')"));
+            Assert.assertEquals(allRelations, testIndex.findConc("rspan(rel('" + type + "'), 'full')"));
+            Assert.assertEquals(allRelations, testIndex.findConc("rspan(rel('" + type + "', _, 'source'), 'full')"));
+
+            Assert.assertEquals(targets, testIndex.findConc("rel('" + type + "', _, 'target')"));
+            Assert.assertEquals(targets, testIndex.findConc("rspan(rel('" + type + "', _, 'full'), 'target')"));
+            Assert.assertEquals(targets, testIndex.findConc("rspan(rel('" + type + "'), 'target')"));
+
+            Assert.assertEquals(sources, testIndex.findConc("rel('" + type + "')"));
+            Assert.assertEquals(sources, testIndex.findConc("rspan(rel('" + type + "', _, 'full'), 'source')"));
+            Assert.assertEquals(sources, testIndex.findConc("rspan(rel('" + type + "', _, 'target'), 'source')"));
+        }
+    }
+
+    @Test
     public void testNfa4() {
-        expected = List.of("[May the Force be with] you");
+        List<String> expected = List.of("[May the Force be with] you");
         Assert.assertEquals(expected, testIndex.findConc(" 'May' '.*e'+ 'with' "));
     }
 
     @Test
     public void testOnlyRepetition() {
-        expected = Arrays.asList("[The] quick", "over [the] lazy", "May [the] Force", "is [the] question");
+        List<String> expected = Arrays.asList("[The] quick", "over [the] lazy", "May [the] Force", "is [the] question");
         Assert.assertEquals(expected, testIndex.findConc("[lemma='.*he']{0,10}"));
     }
 
     @Test
     public void testConstraintSimple0() {
-        expected = List.of("the [Force] be");
+        List<String> expected = List.of("the [Force] be");
         Assert.assertEquals(expected, testIndex.findConc("a:'Force' :: a.word = 'Force'"));
     }
 
     @Test
     public void testConstraintSimple1() {
-        expected = Arrays.asList("noot [mier aap mier] mier", "noot [aap aap aap] aap", "aap [aap aap aap]");
+        List<String> expected = Arrays.asList("noot [mier aap mier] mier", "noot [aap aap aap] aap", "aap [aap aap aap]");
         Assert.assertEquals(expected, testIndex.findConc("a:[] 'aap' b:[] :: a.word = b.word"));
     }
 
     @Test
     public void testConstraintSimple2() {
-        expected = Arrays.asList("noot [mier aap mier] mier", "noot [aap aap aap] aap", "aap [aap aap aap]");
+        List<String> expected = Arrays.asList("noot [mier aap mier] mier", "noot [aap aap aap] aap", "aap [aap aap aap]");
         Assert.assertEquals(expected, testIndex.findConc("a:[] 'aap' b:[] :: a.word = b.lemma"));
     }
 
     @Test
     public void testConstraintSimple3() {
-        expected = List.of("noot [mier aap mier mier] mier");
+        List<String> expected = List.of("noot [mier aap mier mier] mier");
         Assert.assertEquals(expected, testIndex.findConc("a:[] 'aap' 'mier' b:[] :: a.word = b.word"));
     }
 
     @Test
     public void testConstraintSimple4() {
-        expected = List.of("[The quick brown fox jumps over the] lazy");
+        List<String> expected = List.of("[The quick brown fox jumps over the] lazy");
         Assert.assertEquals(expected,
                 testIndex.findConc("a:[] ([]{1,5} containing 'brown') b:[] :: a.lemma = b.lemma"));
     }
 
     @Test
     public void testConstraintSimple4a() {
-        expected = Arrays.asList(
+        List<String> expected = Arrays.asList(
                 "[The quick brown fox] jumps",
                 "[The quick brown fox jumps] over",
                 "[The quick brown fox jumps over] the",
@@ -298,8 +375,22 @@ public class TestSearches {
     }
 
     @Test
+    public void testLocalConstraint() {
+        List<String> expected = List.of("[The quick brown fox jumps over the lazy] dog");
+        Assert.assertEquals(expected,
+                testIndex.findConc("(a:[] ([]{1,5} containing 'brown') b:[] :: a.lemma = b.lemma) 'lazy'"));
+    }
+
+    @Test
+    public void testLocalConstraintAnyTokens() {
+        List<String> expected = List.of("noot [mier aap mier mier] mier", "aap [mier mier mier noot] noot", "noot [aap aap aap aap]");
+        Assert.assertEquals(expected,
+                testIndex.findConc("(a:[] [] b:[] :: a.lemma = b.lemma) []"));
+    }
+
+    @Test
     public void testNGramContainingWithAdjustment() {
-        expected = Arrays.asList(
+        List<String> expected = Arrays.asList(
             "[The quick brown] fox",
             "[The quick brown fox] jumps",
             "[The quick brown fox jumps] over",
@@ -316,7 +407,7 @@ public class TestSearches {
 
     @Test
     public void testExpandTwice() {
-        expected = List.of(
+        List<String> expected = List.of(
                 "[The quick brown fox jumps over] the"
         );
         Assert.assertEquals(expected,
@@ -325,37 +416,37 @@ public class TestSearches {
 
     @Test
     public void testConstraintOr1() {
-        expected = Arrays.asList("noot [mier aap mier] mier", "noot [aap aap aap] aap", "aap [aap aap aap]");
+        List<String> expected = Arrays.asList("noot [mier aap mier] mier", "noot [aap aap aap] aap", "aap [aap aap aap]");
         Assert.assertEquals(expected, testIndex.findConc("a:[] 'aap' b:[] :: a.word = b.lemma | a.word = b.pos"));
     }
 
     @Test
     public void testConstraintOr2() {
-        expected = Arrays.asList("noot [mier aap mier] mier", "noot [aap aap aap] aap", "aap [aap aap aap]");
+        List<String> expected = Arrays.asList("noot [mier aap mier] mier", "noot [aap aap aap] aap", "aap [aap aap aap]");
         Assert.assertEquals(expected, testIndex.findConc("a:[] 'aap' b:[] :: a.word = b.lemma | a.lemma = b.word"));
     }
 
     @Test
     public void testConstraintAnd1() {
-        expected = List.of();
+        List<String> expected = List.of();
         Assert.assertEquals(expected, testIndex.findConc("a:[] 'aap' b:[] :: a.word = b.lemma & a.word = b.pos"));
     }
 
     @Test
     public void testConstraintAnd2() {
-        expected = Arrays.asList("noot [mier aap mier] mier", "noot [aap aap aap] aap", "aap [aap aap aap]");
+        List<String> expected = Arrays.asList("noot [mier aap mier] mier", "noot [aap aap aap] aap", "aap [aap aap aap]");
         Assert.assertEquals(expected, testIndex.findConc("a:[] 'aap' b:[] :: a.word = b.lemma & a.word != b.pos"));
     }
 
     @Test
     public void testConstraintAnd3() {
-        expected = Arrays.asList("noot [mier aap mier] mier", "noot [aap aap aap] aap", "aap [aap aap aap]");
+        List<String> expected = Arrays.asList("noot [mier aap mier] mier", "noot [aap aap aap] aap", "aap [aap aap aap]");
         Assert.assertEquals(expected, testIndex.findConc("a:[] 'aap' b:[] :: a.word = b.lemma & a.pos = b.pos"));
     }
 
     @Test
     public void testConstraintImplication1() {
-        expected = Arrays.asList(
+        List<String> expected = Arrays.asList(
                 "[noot mier aap mier] mier", // left side matches, right side holds
                 "noot [mier aap mier] mier", // left side doesn't match
                 "noot [noot aap aap] aap", // left side doesn't match
@@ -369,7 +460,7 @@ public class TestSearches {
 
     @Test
     public void testConstraintImplication2() {
-        expected = Arrays.asList(
+        List<String> expected = Arrays.asList(
                 "noot [mier aap mier] mier",
                 "noot [noot aap aap] aap",
                 "noot [aap aap aap] aap",
@@ -379,8 +470,21 @@ public class TestSearches {
     }
 
     @Test
+    public void testSortSimple() {
+        List<String> expected = Arrays.asList(
+                "[The] quick",
+                "is [the] question",
+                "May [the] Force",
+                "over [the] lazy"
+        );
+        HitProperty sortBy = new HitPropertyBeforeHit(testIndex.index(), null,
+                MatchSensitivity.INSENSITIVE, 5);
+        Assert.assertEquals(expected, testIndex.findConc("'the'", sortBy));
+    }
+
+    @Test
     public void testSort() {
-        expected = Arrays.asList(
+        List<String> expected = Arrays.asList(
                 "aap [aap aap aap]",
                 "noot [aap aap aap] aap",
                 "noot [mier aap mier] mier",
@@ -388,14 +492,14 @@ public class TestSearches {
                 );
         // If left side of implication is always false, right side is ignored
         HitProperty hit = new HitPropertyHitText(testIndex.index(), MatchSensitivity.INSENSITIVE);
-        HitProperty left = new HitPropertyLeftContext(testIndex.index(), MatchSensitivity.INSENSITIVE);
+        HitProperty left = new HitPropertyBeforeHit(testIndex.index(), null, MatchSensitivity.INSENSITIVE, -1);
         HitProperty sortBy = new HitPropertyMultiple(hit, left);
         Assert.assertEquals(expected, testIndex.findConc("(c:'NOTININDEX')? a:[] 'aap' b:[] :: c -> a.word = b.word", sortBy));
     }
 
     @Test
     public void testSortReverse() {
-        expected = Arrays.asList(
+        List<String> expected = Arrays.asList(
                 "noot [noot aap aap] aap",
                 "noot [mier aap mier] mier",
                 "noot [aap aap aap] aap",
@@ -403,14 +507,14 @@ public class TestSearches {
                 );
         // If left side of implication is always false, right side is ignored
         HitProperty hit = new HitPropertyHitText(testIndex.index(), MatchSensitivity.INSENSITIVE);
-        HitProperty left = new HitPropertyLeftContext(testIndex.index(), MatchSensitivity.INSENSITIVE);
+        HitProperty left = new HitPropertyBeforeHit(testIndex.index(), null, MatchSensitivity.INSENSITIVE);
         HitProperty sortBy = new HitPropertyMultiple(hit, left).reverse();
         Assert.assertEquals(expected, testIndex.findConc("(c:'NOTININDEX')? a:[] 'aap' b:[] :: c -> a.word = b.word", sortBy));
     }
 
     @Test
     public void testFilter() {
-        expected = List.of(
+        List<String> expected = List.of(
                 "noot [noot aap aap] aap"
         );
         // If left side of implication is always false, right side is ignored
@@ -425,7 +529,7 @@ public class TestSearches {
 
     @Test
     public void testNGramsNotContaining() {
-        expected = List.of(
+        List<String> expected = List.of(
                 "noot [noot aap aap] aap"
         );
         BlackLabIndex index = testIndex.index();
@@ -443,12 +547,54 @@ public class TestSearches {
     public void testCaptureGroups() {
         Hits hits = testIndex.find("A:'aap'");
         Assert.assertEquals(5, hits.size());
-        Assert.assertTrue(hits.hasCapturedGroups());
-        Span[] group = hits.capturedGroups().get(hits.get(0));
+        Assert.assertTrue(hits.hasMatchInfo());
+        MatchInfo[] group = hits.get(0).matchInfo();
         Assert.assertNotNull(group);
         Assert.assertEquals(1, group.length);
-        Assert.assertEquals(2, group[0].start());
-        Assert.assertEquals(3, group[0].end());
+        Assert.assertEquals(2, group[0].getSpanStart());
+        Assert.assertEquals(3, group[0].getSpanEnd());
+    }
+
+    @Test
+    public void testCaptureGroups2() {
+        // There's two ways to capture A, so we expect two identical concordances
+        List<String> expected = List.of(
+            "mier [aap mier mier] mier",
+            "mier [aap mier mier] mier"
+        );
+        String query = "(A:'aap' 'mier' []|'aap' 'mier' A:[])";
+        List<String> result = testIndex.findConc(query);
+        Assert.assertEquals(2, result.size());
+        Assert.assertEquals(expected, result);
+        // Validate the actual captures as well
+        Hits hits = testIndex.find(query);
+        Assert.assertEquals(2, hits.size());
+        Assert.assertTrue(hits.hasMatchInfo());
+        Assert.assertEquals(1, hits.get(0).doc());
+        Assert.assertEquals(2, hits.get(0).matchInfo()[0].getSpanStart());
+        Assert.assertEquals(3, hits.get(0).matchInfo()[0].getSpanEnd());
+        Assert.assertEquals(1, hits.get(1).doc());
+        Assert.assertEquals(4, hits.get(1).matchInfo()[0].getSpanStart());
+        Assert.assertEquals(5, hits.get(1).matchInfo()[0].getSpanEnd());
+    }
+
+    @Test
+    public void testCaptureGroups3() {
+        // There's two ways to capture A, so we expect two identical concordances
+        List<String> expected = List.of(
+                "mier [aap mier mier] mier",
+                "mier [aap mier mier mier] noot",  // twice with different captures!
+                "mier [aap mier mier mier] noot",
+                "mier [aap mier mier mier noot] noot",
+                "noot [aap aap aap] aap",
+                "noot [aap aap aap aap]",          // twice with different captures!
+                "noot [aap aap aap aap]",
+                "aap [aap aap aap]"
+        );
+        String query = "'aap' A:([]{1,2}) []{1,2}";
+        List<String> result = testIndex.findConc(query);
+        Assert.assertEquals(8, result.size());
+        Assert.assertEquals(expected, result);
     }
 
     @Test
@@ -468,6 +614,74 @@ public class TestSearches {
         }
         Assert.assertEquals(Set.of("0", "1", "2", "3"), pids);
         Assert.assertEquals(Set.of("Pangram", "Learning words", "Star Wars", "Bastardized Shakespeare"), titles);
+    }
+
+    /** Test that equals and hashCode works for TextPattern and BLSpanQuery (essential for caching!) */
+    @Test
+    public void testTextPatternAndQueryEqualsHashcode() throws InvalidQuery {
+        List<String> queries = Arrays.asList(
+            // Simple sequence query
+            "\"The\" [lemma=\"quick\"]",
+
+            // Any token, repetitions
+            "\"brown\"+ ([]* \"fox\")",
+
+            // Within/containing
+            "\"dog\" within <s/>",
+            "<s/> containing [lemma=\"cat\"]",
+
+            // Global contraints
+            "A:[] B:[] :: A.lemma = B.lemma",
+            "A:[] B:[] :: start(A) < start(B)",
+
+            // Relations
+            "[]* -nmod-> []*",
+            "A:[]* -nmod-> B:[]*",
+            "A:[]* -nmod-> B:[]* :: A.word > B.word"
+        );
+        for (String query: queries) {
+            TextPattern p1 = CorpusQueryLanguageParser.parse(query);
+            TextPattern p2 = CorpusQueryLanguageParser.parse(query);
+            Assert.assertEquals(p1, p2);
+            Assert.assertEquals(p1.hashCode(), p2.hashCode());
+            BlackLabIndex index = testIndex.index();
+            QueryExecutionContext context = new QueryExecutionContext(index,
+                    index.mainAnnotatedField().mainAnnotation(), MatchSensitivity.INSENSITIVE);
+            BLSpanQuery q1 = p1.translate(context);
+            context = new QueryExecutionContext(index,
+                    index.mainAnnotatedField().mainAnnotation(), MatchSensitivity.INSENSITIVE);
+            BLSpanQuery q2 = p2.translate(context);
+            Assert.assertEquals(q1, q2);
+            Assert.assertEquals(q1.hashCode(), q2.hashCode());
+        }
+    }
+
+    @Test
+    public void testFixedSpan() throws InvalidQuery {
+        List<String> expected = Arrays.asList(
+                "The [quick] brown",
+                "noot [mier] aap",
+                "May [the] Force",
+                "To [find] or");
+        TextPattern patt = new TextPatternFixedSpan(1, 2);
+        BLSpanQuery query = patt.translate(new QueryExecutionContext(testIndex.index(),
+                testIndex.index().mainAnnotatedField().mainAnnotation(), MatchSensitivity.INSENSITIVE));
+        Assert.assertEquals(expected, testIndex.findConc(query));
+    }
+
+    @Test
+    public void testEscapedQuote2() throws InvalidQuery {
+        String[] patts = { "[word=\"\\\"\"]", "[word=\"\\\\\\\"\"]" };
+        // In Lucene regex, double quote must be escaped; this is correct
+        for (String patt: patts) {
+            TextPattern tp = CorpusQueryLanguageParser.parse(patt);
+            Assert.assertTrue(tp instanceof TextPatternRegex);
+            Assert.assertEquals("\\\"", ((TextPatternRegex) tp).getValue());
+            BLSpanQuery q = tp.translate(new QueryExecutionContext(testIndex.index(),
+                    testIndex.index().mainAnnotatedField().mainAnnotation(), MatchSensitivity.INSENSITIVE));
+            Assert.assertTrue(q instanceof BLSpanMultiTermQueryWrapper);
+            Assert.assertEquals("contents%word@i:/\\\"/", q.toString());
+        }
     }
 
 }
